feat(article): final thesis

--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -186,9 +186,10 @@
 стають класифікаторами токенів. Найбільшою вибіркою даних для навчання цих класифікаторів
 є корпуси текстів Universal Dependencies.
 
-
 \subsection*{Висновки до розділу \arabic{section}}
 \addcontentsline{toc}{subsection}{Висновки до розділу \arabic{section}}
-У цьому розділі було розглянуто найпопулярніші методи для репрезентації структури речення, освітлено їхні недоліки та переваги. Було описано метод парсингу залежностей у контексті теми цієї роботи та корпусу текстів Universal
+У цьому розділі було розглянуто найпопулярніші методи для репрезентації структури
+речення, освітлено їхні недоліки та переваги. Було описано метод парсингу
+залежностей у контексті теми цієї роботи та корпусу текстів Universal
 Dependencies. Досліджено існуючі алгоритми реалізації цих методів та описано
 приклади розбору заданих формальних граматик.
