--- a/article/sections/section2.tex
+++ b/article/sections/section2.tex
@@ -8,8 +8,10 @@
 спільної розробки з відкритим кодом, який має дві основні цілі:
 
 \begin{enumerate}
-    \item розробити загальну структуру для опису граматичної структури різноманітних мов~\cite{bib1}.
-    \item створювати анотовані корпуси або \hyperlink{term0}{банки дерев} для різних мов,
+    \item розробити загальну структуру для опису граматичної структури
+    різноманітних мов~\cite{bib1}.
+    \item створювати анотовані корпуси або \hyperlink{term0}{банки дерев} для
+    різних мов,
     які застосовують цю структуру~\cite{bib2}.
 \end{enumerate}
 
@@ -37,11 +39,47 @@
     \item UD має бути легко зрозумілим і використаним користувачами, які не знають мови
 \end{enumerate}
 
-Попередником проекту Universal Dependencies був Stanford dependencies, розроблений у 2005 році як рушій для парсеру Stanford parser, щоб допомогти системам розпізнавання тексту Recognizing Textual Entailment, після чого став стандартом для аналізу залежностей англійської мови і з тих пір застосовувався до багатьох мов~\cite{bib9}. Універсальний набір тегів Google виник у результаті міжмовного аналізу помилок на основі співпраці CoNLL-X McDonald і Nivre (2007)~\cite{bib10}, вперше використаного для створення моделі, основаної на підході навчання без учителя, яка вміла визначати тип універсальної частини мови. Після чого ця система стала стандартом де-факто для відображення різноманітних наборів тегів. Наступною ітерацією став інструмент Interset для перетворення між наборами тегів морфологічного синтаксису різними мовами. Пізніше він був використаний як морфологічний шар у проекті HamleDT, для поєднання багатьох мов у загальній структурі анотацій.
+Попередником проекту Universal Dependencies був Stanford dependencies, розроблений
+у 2005 році як рушій для парсеру Stanford parser, щоб допомогти системам
+розпізнавання тексту Recognizing Textual Entailment, після чого став стандартом
+для аналізу залежностей англійської мови і з тих пір застосовувався до багатьох
+мов~\cite{bib9}. Універсальний набір тегів Google виник у результаті міжмовного
+аналізу помилок на основі співпраці CoNLL-X McDonald і Nivre (2007)~\cite{bib10},
+вперше використаного для створення моделі, основаної на підході навчання без
+учителя, яка вміла визначати тип універсальної частини мови. Після чого ця система
+стала стандартом де-факто для відображення різноманітних наборів тегів. Наступною
+ітерацією став інструмент Interset для перетворення між наборами тегів
+морфологічного синтаксису різними мовами. Пізніше він був використаний як
+морфологічний шар у проекті HamleDT, для поєднання багатьох мов у загальній
+структурі анотацій.
 
-Проект Universal Dependency Treebank (UDT), в якому було створено банки дерев для 6 мов, був першою спробою поєднати, універсальні теги Google та Stanford dependencies. Що послугувало приводом для створення проекту універсальних залежностей Стенфорда (USD). Фінальною ітерацією, яка закріпилася на момент написання цієї роботи є проект Universal Dependencies, який є результатом об’єднання всіх цих ініціатив в єдину когерентну структуру, засновану на Універсальних залежностях Стенфорда, розширеній версії набору універсальних тегів Google, переглянутої підмножини інвентаризації функцій Interset та переглянутої версії формату CoNLL-X, що отримав назву CoNLL-U.
+Проект Universal Dependency Treebank (UDT), в якому було створено банки дерев для
+6 мов, був першою спробою поєднати, універсальні теги Google та Stanford
+dependencies. Що послугувало приводом для створення проекту універсальних
+залежностей Стенфорда (USD). Фінальною ітерацією, яка закріпилася на момент
+написання цієї роботи є проект Universal Dependencies, який є результатом
+об’єднання всіх цих ініціатив в єдину когерентну структуру, засновану на
+Універсальних залежностях Стенфорда, розширеній версії набору універсальних тегів
+Google, переглянутої підмножини інвентаризації функцій Interset та переглянутої
+версії формату CoNLL-X, що отримав назву CoNLL-U.
 
-Перша версія Universal Dependencies, випущена ще в жовтні 2014 року, представила дещо розширений набір мовних тегів загального призначення. Цей набір має деякі відмінності від вихідного речення, але робить його менш насиченим і уточнює визначення категорій. В результаті цієї роботи теги універсальної частини мови (Universal Part of Speech) мають змістовні визначення і не обов'язково є еквівалентними класами категорій у головному банку дерев для окремих мов. Тому перетворення на теги універсальної частини часто вимагає змін контексту або внесенння змін вручну. Морфологічні ознаки UD призначені для аналізу, щоб отримати стислий набір основних ознак, які є унікальними та поширеними в усіх мовах. Представлення залежностей UD розвивається зі Стенфордських залежностей, які самі слідують ідеї опису, орієнтованого на граматичне відношення, який можна знайти в багатьох мовних структурах. Він централізовано організований навколо таких понять, як суб’єкт, об’єкт речення, визначник іменника та модифікатор іменника. Метою Universal Dependencies є краща адаптація граматичних структур типологічно різних мов, а також додавання чи покращення зв’язків, щоб очистити більш химерні та більш специфічні для англійської мови особливості оригінальної версії. Таким чином, нова таксономія має менше зв’язків, ніж оригінальна Stanford dependencies.
+Перша версія Universal Dependencies, випущена ще в жовтні 2014 року, представила
+дещо розширений набір мовних тегів загального призначення. Цей набір має деякі
+відмінності від вихідного речення, але робить його менш насиченим і уточнює
+визначення категорій. В результаті цієї роботи теги універсальної частини мови
+(Universal Part of Speech) мають змістовні визначення і не обов'язково є
+еквівалентними класами категорій у головному банку дерев для окремих мов. Тому
+перетворення на теги універсальної частини часто вимагає змін контексту або
+внесенння змін вручну. Морфологічні ознаки UD призначені для аналізу, щоб отримати
+стислий набір основних ознак, які є унікальними та поширеними в усіх мовах.
+Представлення залежностей UD розвивається зі Стенфордських залежностей, які самі
+слідують ідеї опису, орієнтованого на граматичне відношення, який можна знайти в
+багатьох мовних структурах. Він централізовано організований навколо таких понять,
+як суб’єкт, об’єкт речення, визначник іменника та модифікатор іменника. Метою
+Universal Dependencies є краща адаптація граматичних структур типологічно різних
+мов, а також додавання чи покращення зв’язків, щоб очистити більш химерні та більш
+специфічні для англійської мови особливості оригінальної версії. Таким чином, нова
+таксономія має менше зв’язків, ніж оригінальна Stanford dependencies.
 
 \subsection{Формат даних CoNLL-U}
 Формат CoNLL-U є наступною ітерацією формату CoNLL-X~\cite{bib11},
@@ -58,7 +96,8 @@
 У цьому форматі є всього 3 типи рядків:
 
 \begin{enumerate}
-    \item Рядки слів, що містять анотацію слова/токена в 10 полях, розділених одиночними символами табуляції.
+    \item Рядки слів, що містять анотацію слова/токена в 10 полях, розділених
+    одиночними символами табуляції.
     \item Порожні рядки, що позначають межі речень.
     \item Коментарі, або рядки, які починаються з символа ``\#''.
 \end{enumerate}
