--- a/article/sections/section4.tex
+++ b/article/sections/section4.tex
@@ -15,7 +15,8 @@
 \subsection{Утиліти Universal Dependencies для обробки даних}
 
 Проект Universal Dependencies має багато корисних інструментів, розроблених спільнотою.
-Половина з них написана мовою Python, яка також використовувалася для розробки цієї роботи, інша половина написана мовою Perl.
+Половина з них написана мовою Python, яка також використовувалася для розробки
+цієї роботи, інша половина написана мовою Perl.
 Найкориснішими з них, мабуть, є скрипт валідації та нормалізації
 файлів. Адже для багатьох мов, включаючи українську, де символи закодовані
 кирилицею, важливо мати правильне кодування файлу, для коректного його
@@ -52,7 +53,8 @@
   \item overlap.py --- Порівнює два файли CoNLL-U та шукає речення, які
   зустрічаються в обох (дослівні копії послідовностей лексем). Деякі банки
   дерев, особливо ті, де оригінальний текст був отриманий з Інтернету, містять
-  дублікати. Цей інструмент допомагає з’ясувати, чи потрапив один із дублікатів у тренуваьні дані, а інший — у розробку чи тестування.
+  дублікати. Цей інструмент допомагає з’ясувати, чи потрапив один із дублікатів
+  у тренуваьні дані, а інший — у розробку чи тестування.
   
   \item conllu\_to\_text.pl --- Перетворює файл у форматі CoNLL-U на звичайний
   текст, перенесений у рядки по 80 символів 
