--- a/article/structural/abstract.tex
+++ b/article/structural/abstract.tex
@@ -14,9 +14,10 @@
 допомогою бібліотеки MatPlotLib. Для побудови моделі, структур даних
 та статистичного аналізу використовувалися бібліотеки Pandas та Numpy.
 
-Записка містить \pageref{LastPage} сторінок, 24 рисунки, 1 таблицю, 1 додаток і 21 посилання.
+Записка містить \pageref{LastPage} сторінок, 18 рисунків, 1 таблицю, 1 додаток і 21 посилання.
 
-Ключові слова: python, обробка природної мови, аналіз даних, інтерпретована мова програмування, візуалізація, статистичний аналіз.
+Ключові слова: python, обробка природної мови, аналіз даних, інтерпретована мова
+програмування, візуалізація, статистичний аналіз.
 
 \newpage
 \thispagestyle{empty}
@@ -28,12 +29,16 @@
 The purpose of the thesis is to develop a software product for statistical
 analysis of the formal structures of the text corpora Universal Dependencies.
 The results of the program can be used by researchers in the field of
-artificial intelligence and data science, for a better understanding of the data they going to use for their models.
+artificial intelligence and data science, for a better understanding of
+the data they going to use for their models.
 
-The code was written in Python, object-oriented programming language.
-Output and visualization of the data are made via charts, using the MatPlotLib library. Pandas and Numpy libraries were used to build a model, data structure
-and to perform a statistical analysis.
+The code was written in Python, an object-oriented programming language.
+Output and visualization of the data are made via charts, using the MatPlotLib
+library. Pandas and Numpy libraries were used to build a model, data structure
+and to perform statistical analysis.
 
-Thesis has a volume of \pageref{LastPage} sheets and contains 1 appendices and 24 references. There are also 23 figures and 1 table.
+The thesis has a volume of \pageref{LastPage} sheets and contains 1 appendix and 21
+references. There are also 18 figures and 1 table.
 
-Keywords: python, natural language processing, data science, interpreted programming language, visualization, statistical analysis.
+Keywords: python, natural language processing, data science, interpreted
+programming language, visualization, statistical analysis.
