--- a/article/structural/introduction.tex
+++ b/article/structural/introduction.tex
@@ -9,7 +9,8 @@
 Обробка природної мови --- це область комп’ютерної лінгвістики, мета якої
 полягає у знаходженні значимої інформації з текстів, подальшому аналізі цієї
 інформації та прикладному застосуванні проаналізованих даних. Предметом
-дослідження є природні мови --- ті, які природньо розвивалася з часом та які люди використовують для того, щоб комунікувати між собою.
+дослідження є природні мови --- ті, які природньо розвивалася з часом та які люди
+використовують для того, щоб комунікувати між собою.
 
 Основоположною задачею при дослідження природних мов є створення класифікованих
 та впорядкованих наборів даних, для того щоб з них можна було отримати
