fix(article): modern uk spelling

--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -169,7 +169,7 @@
     \item Алгоритми на основі графів та виділенню кістякових дерев.
 \end{enumerate}
 
-Деякі алгоритми є проективними, тобто зв'язки між вузлами не можуть пересікатися, як
+Деякі алгоритми є проєктивними, тобто зв'язки між вузлами не можуть пересікатися, як
 це зображено на рисунку~\ref{img:dependency_tree}. Більшість реченнь у мові
 влаштована саме таким чином. Але є й речення, у яких грані графа перетинаються. Тому це
 потрібно враховувати при обробці відповідних наборів даних.
