--- a/article/sections/section3.tex
+++ b/article/sections/section3.tex
@@ -1,6 +1,6 @@
 \section{ПОГРАМНА РЕАЛІЗАЦІЯ}
 Визначившись із мовою програмування, інструментами для розробки, можна перейти
-до проектування та написання програмного продукту.
+до проєктування та написання програмного продукту.
 
 \subsection{Парадигма програмування та архітектура}
 Програмний код був написаний мовою Python. Оскільки це мультипарадигменна мова
@@ -104,7 +104,7 @@ CoNLL-U.
 використовувався мовний сервер Pyright, який автоматично поставляється в середовищі PyCharm.
 Із використаним модулем типізації, Pyright пропонує більш точні підказки для автодоповнення
 адже йому самому не портібно виводити типи із контексту, він використовує уже статично оголошені.
-Все це сприяє підвищенню зрозумілості кодової бази і з розростанням проекту дозволяє не
+Все це сприяє підвищенню зрозумілості кодової бази і з розростанням проєкту дозволяє не
 запам'ятовувати що знаходиться у кожній змінній, а покладатися на підказки мовного сервера.
 
 \subsection{Модуль тестування}
