--- a/article/sections/section5.tex
+++ b/article/sections/section5.tex
@@ -164,7 +164,7 @@ Dependencies.
 \ref{img:uk0}~\nobreakdash--~\ref{img:es3},
 ми можемо дійти до висновку, що тренди, які
 спостерігаються в україномовному корпусі майже так само прослідковуються в
-іспаномовному корпусі, що підтверджує зазначену мету проекту Universal Dependencies.
+іспаномовному корпусі, що підтверджує зазначену мету проєкту Universal Dependencies.
 
 У цьому розділі було продемонстровано статистичні закономірності у двох
 корпусах UD. Загалом проаналізовано 2016 дерев в україномовному та 16013 дерев
