fix(article): tweak introduction and conclusion now 100% final for sure

--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -112,7 +112,7 @@
 з двох нетермінальних символів, або з одного термінального символа.
 
 \subsection{Парсинг залежностей}
-У конституентного парсингу є два фатальні недоліки, які не дозволяють
+У конституентного парсингу є два недоліки, які не дозволяють
 моделювати важливі структурні та лексичні залежності:
 \begin{enumerate}
     \item Припущення про незалежність: такий метод спирається на статистичні
