--- a/article/sections/section2.tex
+++ b/article/sections/section2.tex
@@ -4,7 +4,7 @@
 тому проєкт Universal Dependencies ставить на меті її вирішити~\cite{bib18}.
 
 \subsection{Корпуси текстів Universal Dependencies}
-Корпуси текстів Universal Dependencies або скорочено UD — це проєкт
+Корпуси текстів Universal Dependencies або скорочено UD —-- це проєкт
 спільної розробки з відкритим кодом, який має дві основні цілі:
 
 \begin{enumerate}
@@ -20,7 +20,7 @@
 між мовами. Це, в свою чергу значно полегшить роботу перекладачів
 адже всі важливі характеристики мов будуть класифікованими по категоріям.
 
-Лінгвістичні корпуси, які містять анотації для синтаксичних відносин,
+Лінгвістичні корпуси, які містять анотації для синтаксичних відношень,
 часто називають банками дерев (трібанками), оскільки синтаксичні структури, як правило,
 представлені за допомогою деревоподібних структур. Таким чином, у цьому контексті трібанк —
 це просто набір синтаксичних дерев, які були послідовно анотовані за допомогою UD
