--- a/article/sections/section5.tex
+++ b/article/sections/section5.tex
@@ -114,7 +114,7 @@ Dependencies.
 \end{multicols}
 
 \newpage
-\subsection{Розбір суфіксних дерев}
+\subsection{Морфологічні підрядки у суфіксному дереві}
 Для знаходження спільних характеристик дуже важливо мати
 швидкий алгоритм пошуку по всім реченням корпусу. З цією метою,
 всі речення трансформуються та подаються у вигляді суфікснних дерев, за 
@@ -141,7 +141,7 @@ Dependencies.
 речення у вигляді універсальної частини мови, ми можемо знайти найдовші такі
 підрядки та частоту їх зустрічання. Наприклад, для граматики
 \texttt{NOUN~NOUN~NOUN~PROPN~ADP~ADJ~NOUN~ADJ~NOUN~NOUN~NUM~PUNCT} ми можемо
-знайти відповідну грань у створеному суфіксному дереві - \texttt{BBBKHLBLBBND}.
+знайти відповідну грань у створеному суфіксному дереві --- \texttt{BBBKHLBLBBND}.
 Співставивши це із підрядками речень отримаємо результат: частота підрядків
 із такою граматикою дорівнює трьом, а самі підрядки будуть виглядати наступним
 чином: 
