--- a/article/structural/conclusion.tex
+++ b/article/structural/conclusion.tex
@@ -7,21 +7,33 @@
 \textbf{\Large ВИСНОВКИ}
 \end{center}
 
-У ході виконання цієї роботи було розроблено інструмент, який дозволяє аналізувати
-корпуси текстів на відповідні статистичні закономірності, такі як частота зустрічання
-частин мови, частота універсальних залежностей від кореневого елементу речення, глибина
-та ширина піддерева кожного слова, та інші.
-Було розроблено механізм конвертації дерев до суфіксних дерев, що дає змогу
-шукати спільні підрядки та їх частоти за заданою граматикою.
 
-Цей інструмент не залежить від мови, тому можна аналізувати та
-порівнювати будь-які мови корпусу. 
-Додані інструменти по нормалізації корпусів сприяють тому, щоб різниця
-у вхідних даних, при порівнянні різних мов була мінімальною.
+Проєкт Universal Dependencies спрямований на розробку міжмовно
+узгоджених анотацій лінгвістичних корпусів для багатьох мов. Представлення
+залежностей UD зосереджується на таких поняттях, як предикат, суб’єкт, об’єкт
+речення, визначник іменника та модифікатор іменника. В результаті уточнення
+граматичних категорій в UD сформовані теги так званої універсальної частини
+мови (Universal Part of Speech).
+Анотовані лінгвістичні корпуси UD представлені у форматі CoNLL-U, де
+кожне слово характеризується, зокрема і синтетичними, показниками у десяти
+тегах.
+Розроблений програмний інструментарій дозволяє автоматизовано
+аналізувати обраний корпус текстів і формувати сигнатури —-- набір формальних
+показників та досліджувати їх.
+Серед вилучених та побудованих формальних показників, --- синтаксична
+роль (deprel) та універсальна частина мови (upos), синтаксично-морфологічний
+показник (deprel+upos), сигнатура синтаксичних піддерев та повторювані підрядки
+морфологічних рядків.
+Встановлено, що із розглянутих показників тільки синтаксично-морфологічний
+виявляє ознаки показника системності, що випливає із близькості
+його розподілу до розподілу Ципфа, --- як у корпусі української, так і у корпусі
+іспанської мови.
+Повторювані підрядки морфологічних рядків речень ефективно
+обчислюються з використанням побудованого на корпусі узагальненого суфіксного
+дерева.
 
-Було проведено порівння корпусів з іспанською та українською мовами та встановлено кореляцію
-деяких характеристик із законом Ципфа.
-
-Перед виконанням цієї роботи я ознайомився з методами обробки природної мови
-а також з науковими статистичними бібліотеками мови Python, а саме Pandas та Numpy, які використовувалися
-в кінцевому програмному продукті.
+У ході виконання роботи були розглянуті основні методи по обробці речень та
+використані наукові статистичні бібліотеки, написані мовою Python, а саме: Pandas
+та Numpy. Було проведено модульне тестування окремих програмних компонентів
+та застосовано розроблений інструментарій до корпусів UD з іспанською та
+українською мовами.
