--- a/article/structural/introduction.tex
+++ b/article/structural/introduction.tex
@@ -12,24 +12,25 @@
 дослідження є природні мови --- ті, які природньо розвивалася з часом та які люди
 використовують для того, щоб комунікувати між собою.
 
-Основоположною задачею при дослідження природних мов є створення класифікованих
+Головною задачею при дослідження природних мов є створення класифікованих
 та впорядкованих наборів даних, для того щоб з них можна було отримати
-корисну інформацію, яку можна використати у прикладних сферах науки та програмування.
-На основі таких даних можна створювати штучні інтелекти, для взаємодії з комп'ютером
-використовуючи тільки природню мову. Прикладами таких систем є асистенти в популярних
-мобільних операційних системах, які виводять інтерфейс користування пристроєм
-на зовсім інший рівень. Але застосування подібних штучних інтелектів
-не обмежується тільки голосовими асистентами. Дуже перспективними є варіанти застосування
-для аналізу текстів та маркування їх за певними категоріями. Досконало дослідивши
-закономірності в природних мовах можна значно підвищити точність машинного перекладу
-(наприклад сервіс Google Translate) або створити системи, які перевіряють
-тексти на граматичні та лексичні помилки (наприклад сервіс Grammarly). Такі системи
-послуговуються не тільки набором вхідних слів, а й структурою речення,
-його забарвленням та, навіть, контекстом, у якому воно вживається.
+корисну інформацію, з метою використання у прикладних сферах науки та програмування.
+Серед найбільш популярних варіантів застосувань є розробка моделей штучних
+інтелектів, які можуть слугувати для різноманітних цілей: створення мобільних
+асистентів для керування пристроями за допомогою голосу, підвищення точності машинного перекладу (наприклад сервіс Google Translate), для аналізу текстів на
+граматичні та лексичні помилки (наприклад сервіс Grammarly), для розбору текстів
+та маркування їх за певними категоріями, контекстом та емоційним забарвленням.
 
-Метою цієї роботи є створення інструменту, який дозволяє досліджувати та порівнювати
-статистичні закономірності у різних природніх мовах,
-використовуючи корпуси текстів Universal Dependencies. Це дозволить краще розуміти
-інформацію про структуру та форму даних, що будуть використовуватися для
-створення моделей штучних інтелектів. Як наслідок, можна буде використовувити
-найбільш підходящі набори даних, для навчання таких моделей.
+\textbf{Мета роботи} полягає у створенні програмного інструментарію для
+автоматизованого аналізу дерев універсальних залежностей та виявлення
+характерних сигнатур змістовних одиниць коропусу текстів.
+Для досягнення поставленої мети необхідно виконати \textbf{завдання}:
+
+\begin{enumerate}
+    \item Ознайомитись із основними засадами проєкту Universal Dependencies
+    (UD), спрямованого на розробку міжмовно узгоджених корпусів текстів.
+    \item Розглянути методи формального розбору та представлення речень.
+    \item Розробити програмний інструментарій для автоматичної обробки корпусів
+    UD.
+    \item Застосувати розроблений інструментарій для аналізу вибраних корпусів UD.
+\end{enumerate}
